--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ag-grid-angular 
     style="width: 1200px; height: 500px;" 
     class="ag-theme-balham"
-    [rowData]="rowData" 
+    [rowData]="rowData | async" 
     [columnDefs]="columnDefs"
     >
 </ag-grid-angular>
