--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
+<button (click)="getSelectedRows()">Get Selected Rows</button>
+
 <ag-grid-angular 
+    #agGrid
     style="width: 1200px; height: 500px;" 
     class="ag-theme-balham"
     [rowData]="rowData | async" 
     [columnDefs]="columnDefs"
+    rowSelection="multiple"
     >
 </ag-grid-angular>
